WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218118
[JSC] Fix argument order for double and/or ops on ARMv7
https://bugs.webkit.org/show_bug.cgi?id=218118
Summary
[JSC] Fix argument order for double and/or ops on ARMv7
Angelos Oikonomopoulos
Reported
2020-10-23 01:15:36 PDT
[JSC] Fix argument order for double and/or ops on ARMv7
Attachments
Patch
(1.81 KB, patch)
2020-10-23 01:17 PDT
,
Angelos Oikonomopoulos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2020-10-23 01:17:03 PDT
Created
attachment 412159
[details]
Patch
Xan Lopez
Comment 2
2020-10-23 01:59:39 PDT
This is definitely right, so informal LGTM.
EWS
Comment 3
2020-10-23 02:44:19 PDT
Committed
r268918
: <
https://trac.webkit.org/changeset/268918
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412159
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-10-23 02:45:29 PDT
<
rdar://problem/70611837
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug