[JSC] Fix argument order for double and/or ops on ARMv7 https://bugs.webkit.org/show_bug.cgi?id=218118

Patch by Angelos Oikonomopoulos <angelos@igalia.com> on 2020-10-23
Reviewed by Adrian Perez de Castro.

The andDouble and orDouble macro assembler methods for ARMv7
incorrectly pass the destination register as the last argument,
whereas the assembler expects the destination to be the first
argument.

This fixes a failing testmasm test.

* assembler/MacroAssemblerARMv7.h:
(JSC::MacroAssemblerARMv7::andDouble):
(JSC::MacroAssemblerARMv7::orDouble):

Canonical link: https://commits.webkit.org/230826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268918 268f45cc-cd09-0410-ab3c-d52691b4dbfc